--- a/.github/workflows/update-data-test.yml
+++ b/.github/workflows/update-data-test.yml
@@ -31,3 +31,12 @@ jobs:
         mkdir -p pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3
         content=$(curl https://pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3/index.json)
         echo $content | jq . > pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3/index.json
+    - name: Commit and push data has changed
+      run: |-
+        git config user.name "Automated"
+        git config user.email "actions@users.noreply.github.com"
+        git checkout -b test
+        git add -A
+        timestamp=$(date --iso-8601=seconds)
+        git commit -m "Latest data: ${timestamp}" || exit 0
+        git push origin test --force-with-lease
