--- a/.github/workflows/update-data-test.yml
+++ b/.github/workflows/update-data-test.yml
@@ -14,22 +14,22 @@ jobs:
     - name: Check PROD
       run: |-
         mkdir -p api.nuget.org/v3
-        content=$(curl https://api.nuget.org/v3/index.json)
+        content=$(curl --silent --show-error --fail --retry 5 --retry-connrefused https://api.nuget.org/v3/index.json)
         echo $content | jq . > api.nuget.org/v3/index.json
     - name: Check INT
       run: |-
         mkdir -p apiint.nugettest.org/v3
-        content=$(curl https://apiint.nugettest.org/v3/index.json)
+        content=$(curl --silent --show-error --fail --retry 5 --retry-connrefused https://apiint.nugettest.org/v3/index.json)
         echo $content | jq . > apiint.nugettest.org/v3/index.json
     - name: Check DEV
       run: |-
         mkdir -p apidev.nugettest.org/v3
-        content=$(curl https://apidev.nugettest.org/v3/index.json)
+        content=$(curl --silent --show-error --fail --retry 5 --retry-connrefused https://apidev.nugettest.org/v3/index.json)
         echo $content | jq . > apidev.nugettest.org/v3/index.json
     - name: Check Azure DevOps nuget-build
       run: |-
         mkdir -p pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3
-        content=$(curl https://pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v4/index.json)
+        content=$(curl --silent --show-error --fail --retry 5 --retry-connrefused https://pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v4/index.json)
         echo $content | jq . > pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3/index.json
     - name: Commit and push data has changed
       run: |-
