--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -26,7 +26,7 @@ jobs:
       run: |-
         mkdir -p apidev.nugettest.org/v3
         curl https://apidev.nugettest.org/v3/index.json | jq . > apidev.nugettest.org/v3/index.json
-    - name: Commit and push data has changed
+    - name: Commit and push if data has changed
       run: |-
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
