--- a/.github/workflows/update-data-test.yml
+++ b/.github/workflows/update-data-test.yml
@@ -31,7 +31,7 @@ jobs:
         mkdir -p pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3
         content=$(curl --silent --show-error --fail --retry 5 --retry-connrefused https://pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v4/index.json)
         echo $content | jq . > pkgs.dev.azure.com/dnceng/public/_packaging/nuget-build/nuget/v3/index.json
-    - name: Commit and push data has changed
+    - name: Commit and push if data has changed
       run: |-
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
