--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,7 +1,7 @@
 # Periodically checks the nuget.org V3 service index for changes.
 # Inspired by https://simonwillison.net/2020/Oct/9/git-scraping/
 
-name: Update data (test)
+name: Update data
 
 on:
   workflow_dispatch:
